apps/kiali-gateway/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway-kiali
  namespace: istio-system
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "kiali.127.0.0.1.nip.io"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-vs-01
  namespace: istio-system
spec:
  hosts:
  - "kiali.127.0.0.1.nip.io"
  gateways:
  - istio-gateway-kiali
  http:
  - name: 'kiali-route'
    match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 20001
        host: kiali
